# open

./: .gitignore  Alternative.txt  LICENSE  README.md  Signals II.md  Signals.md  signals.py
adam/: RESEARCH.md  adam.py  thoughts.db  thoughts.db-journal  thoughts.db.20241011  thoughts.db.20241011-02  thoughts.db.20241011-03  thoughts.db.20241011.sammy  thoughts.db.20241012-02  thoughts.db.20241012-03
adam/conversations/: 2024-10-11-Conversation2.md  2024-10-11-Conversation3.md  2024-10-11-Conversation4-FirstOllama.md  2024-10-11-Conversation5.md  2024-10-11-Conversation6.md  2024-10-11-Conversation7.md
fantasy/: Trust-Based Decentralized Network Systems.md
golf/: README-golf.md  README.md
reasoning-and-arguments/: claude-gps-analogy-part-2.md  claude-gps-analogy.md
signals-rs/: Cargo.toml  HONEYCOMB.md  main.rs  network_simulation
signals-rs/src/: main.rs
signals-rs/tests/coh/: 4000-simulation.rs  4100-visualization.rs  4200-coherence.rs  4300-coherence-adjustment.rs  4400-temporal-coherence.rs  4500-coherence-security.rs  4600-coherence-integration.rs
signals-rs/tests/gsp/: 3000-gossip.rs  3000-mechanics.rs  3100-failure.rs  3200-state.rs  3300-security.rs  3400-integration.rs  3500-adaptation.rs  3600-coherence.rs  3700-optimization.rs  3800-recovery.rs  3900-metrics.rs
signals-rs/tests/hex/: 1000-position.rs  1100-distance.rs  1200-management.rs  1300-neighbors.rs
signals-rs/tests/nbr/: 2000-tables.rs  2100-paths.rs  2200-routes.rs  2300-performance.rs  2400-failures.rs
signals-rs/tests/vdf/: 7000-latency.rs
signals-tri-rs/: Cargo.toml
(+21 files in other folders)
